--- a/_pages/iasd2025.md
+++ b/_pages/iasd2025.md
@@ -11,9 +11,7 @@ Welcome to the course page for the **Mathematics of deep learning** course at th
 
 ## Course Information
 
-- **Instructor**:
-  - Dr. Bruno Loureiro
-
+- **Instructor**: Dr. Bruno Loureiro
 - **Email**: [bruno.loureiro@di.ens.fr](mailto:bruno.loureiro@di.ens.fr)
 - **Semester**: Winter 2025
 - **Class Times**: Fridays, 9:00 AM - 12:15 AM
