--- a/_pages/iasd2025.md
+++ b/_pages/iasd2025.md
@@ -30,6 +30,10 @@ In the absence of a well-defined body of mathematics that could be called a bona
 - Implicit bias of GD/SGD.
 - The speciation transition in diffusion models.
 
+## Requirement
+
+Undergraduate level linear algebra and probability will be assumed. Please check you are familiar with the [maths checklist](../assets/iasd2025/maths.pdf).
+
 ## Recommended literature
 
 We will cover a variety of research topics which cannot be found in a single textbook. Nevertheless, when preparing this course I took inspiration in some excellent ressources which are freely available, and which you might also find useful:
@@ -43,7 +47,7 @@ We will cover a variety of research topics which cannot be found in a single tex
 
 | Date        | Lecture Topic                | Materials                            |
 |-------------|------------------------------|--------------------------------------|
-| Jan 10     | - Introduction <br> - Recap of maths         |  |
+| Jan 10     | - Motivation <br>  - Review of ERM         | [Introduction](../assets/iasd2025/introduction.pdf) |
 | Jan 17     |  |  |
 | Jan 24     |  |  |
 | Jan 31     | No class  |  |
