--- a/_pages/iasd2025.md
+++ b/_pages/iasd2025.md
@@ -7,7 +7,7 @@ nav: false
 nav_order: 5
 ---
 
-Welcome to the course page for the **Mathematics of deep learning** course at the *Intelligence Artificielle, Systèmes, Données - Informatique* ([IASD](https://dauphine.psl.eu/formations/masters/informatique/m2-intelligence-artificielle-systemes-donnees)) M2 program from [PSL University](https://psl.eu/). Here you'll find all the course information and materials.
+Welcome to the course page for the **Mathematics of deep learning** course at the *Intelligence Artificielle, Systèmes, Données - Informatique* ([IASD](https://dauphine.psl.eu/formations/masters/informatique/m2-intelligence-artificielle-systemes-donnees)) M2 and [Artificial Intelligence, Systems, Data - Mathematics Track](https://dauphine.psl.eu/en/training/masters-degrees/mathematics-and-applied-mathematics/masters-year-2-artificial-intelligence-systems-data/program) M2 programs from [PSL University](https://psl.eu/). Here you'll find all the course information and materials.
 
 ## Course Information
 
@@ -32,7 +32,7 @@ In the absence of a well-defined body of mathematics that could be called a bona
 
 ## Requirement
 
-Undergraduate level linear algebra and probability will be assumed. Please check you are familiar with the [maths checklist](../assets/iasd2025/maths.pdf).
+Undergraduate level linear algebra, analysis and probability will be assumed. Please check you are familiar with the [maths checklist](../assets/iasd/maths.pdf).
 
 ## Recommended literature
 
@@ -47,7 +47,7 @@ We will cover a variety of research topics which cannot be found in a single tex
 
 | Date        | Lecture Topic                | Materials                            |
 |-------------|------------------------------|--------------------------------------|
-| Jan 10     | - Motivation <br>  - Review of ERM         | [Introduction](../assets/iasd2025/introduction.pdf) |
+| Jan 10     | - Motivation <br>  - Review of ERM         | [Introduction](../assets/iasd/introduction.pdf) |
 | Jan 17     |  |  |
 | Jan 24     |  |  |
 | Jan 31     | No class  |  |
