--- a/_pages/iasd2025.md
+++ b/_pages/iasd2025.md
@@ -47,8 +47,8 @@ We will cover a variety of research topics which cannot be found in a single tex
 
 | Date        | Lecture Topic                | Materials                            |
 |-------------|------------------------------|--------------------------------------|
-| Jan 10     | - Motivation <br>  - Review of ERM         | [Introduction](../assets/iasd/introduction.pdf) <br> [Homework 1](../assets/iasd/mathsdl_hw1.pdf)|
-| Jan 17     | - Curse of dimensionality <br>  - Approximation theory | [Introduction](../assets/iasd/approximation.pdf) <br> [Homework 2](../assets/iasd/mathsdl_hw2.pdf)|
+| Jan 10     | - Motivation <br>  - Review of ERM         | [Notes](../assets/iasd/introduction.pdf) <br> [Homework 1](../assets/iasd/mathsdl_hw1.pdf)|
+| Jan 17     | - Curse of dimensionality <br>  - Approximation theory | [Notes](../assets/iasd/approximation.pdf) <br> [Homework 2](../assets/iasd/mathsdl_hw2.pdf)|
 | Jan 24     |  |  |
 | Jan 31     | No class  |  |
 | Feb 07     |  |  |
