--- a/_pages/iasd2025.md
+++ b/_pages/iasd2025.md
@@ -7,7 +7,7 @@ nav: false
 nav_order: 5
 ---
 
-Welcome to the course page for the **Mathematics of deep learning** course at the *Intelligence Artificielle, Systèmes, Données - Informatique* ([IASD](https://dauphine.psl.eu/formations/masters/informatique/m2-intelligence-artificielle-systemes-donnees)) and the *Artificial Intelligence, Systems, Data - Mathematics Track* ()[MASH](https://dauphine.psl.eu/en/training/masters-degrees/mathematics-and-applied-mathematics/masters-year-2-artificial-intelligence-systems-data/program)) M2 programs from [PSL University](https://psl.eu/). Here you'll find all the course information and materials.
+Welcome to the course page for the **Mathematics of deep learning** course at the *Intelligence Artificielle, Systèmes, Données - Informatique* ([IASD](https://dauphine.psl.eu/formations/masters/informatique/m2-intelligence-artificielle-systemes-donnees)) and the *Artificial Intelligence, Systems, Data - Mathematics Track* ([MASH](https://dauphine.psl.eu/en/training/masters-degrees/mathematics-and-applied-mathematics/masters-year-2-artificial-intelligence-systems-data/program)) M2 programs from [PSL University](https://psl.eu/). Here you'll find all the course information and materials.
 
 ## Course Information
 
