--- a/_pages/iasd2025.md
+++ b/_pages/iasd2025.md
@@ -48,8 +48,8 @@ We will cover a variety of research topics which cannot be found in a single tex
 | Date        | Lecture Topic                | Materials                            |
 |-------------|------------------------------|--------------------------------------|
 | Jan 10     | - Motivation <br>  - Review of ERM         | [Notes](../assets/iasd/introduction.pdf) <br> [Homework 1](../assets/iasd/mathsdl_hw1.pdf)|
-| Jan 17     | - Curse of dimensionality <br>  - Approximation theory | [Notes](../assets/iasd/approximation.pdf) <br> [Homework 2](../assets/iasd/mathsdl_hw2.pdf)|
-| Jan 24     |  |  |
+| Jan 17     | - Curse of dimensionality <br>  - Approximation theory | Sections 1 to 3.1 of the [Notes](../assets/iasd/approximation.pdf) <br> [Homework 2](../assets/iasd/mathsdl_hw2.pdf)|
+| Jan 24     | - Approximation theory (continued) | Sections 3.2 to 4 of the [Notes](../assets/iasd/approximation.pdf) <br> - [Homework 3](../assets/iasd/mathsdl_hw3.pdf)|
 | Jan 31     | No class  |  |
 | Feb 07     |  |  |
 | Feb 14     |  |  |
