--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,7 +1,18 @@
 ---
 ---
 
+@misc{defilippis2025optimal,
+      bibtex_show={true},
+      title={Optimal Spectral Transitions in High-Dimensional Multi-Index Models},
+      author={Leonardo Defilippis and Yatin Dandi and Pierre Mergny and Florent Krzakala and Bruno Loureiro},
+      year={2025},
+      eprint={2502.02545},
+      archivePrefix={arXiv},
+      primaryClass={cs.LG},
+}
+
 @misc{dandi2024random,
+      bibtex_show={true},
       title={A Random Matrix Theory Perspective on the Spectrum of Learned Features and Asymptotic Generalization Capabilities},
       author={Yatin Dandi and Luca Pesce and Hugo Cui and Florent Krzakala and Yue M. Lu and Bruno Loureiro},
       year={2024},
@@ -11,6 +22,7 @@
 }
 
 @misc{vilucchio2024geometry,
+      bibtex_show={true},
       title={On the Geometry of Regularization in Adversarial Training: High-Dimensional Asymptotics and Generalization Bounds},
       author={Matteo Vilucchio and Nikolaos Tsilivis and Bruno Loureiro and Julia Kempe},
       year={2024},
