--- a/_pages/iasd2025.md
+++ b/_pages/iasd2025.md
@@ -19,6 +19,8 @@ Welcome to the course page for the **Mathematics of deep learning** course at th
 
 ## Evaluation
 
+50% Homework + 50% paper presentation and discussion.
+
 ## Course Description
 
 In the absence of a well-defined body of mathematics that could be called a bona fide "*theory of deep learning*", our goal in these lectures will be instead to introduce the students to some recent mathematical ideas that emerged in the study of deep learning. We don't aim at being exhaustive, but rather to train the students at reading paper and preparing them to do research in deep learning theory, inasmuch as this can be defined.
@@ -51,7 +53,7 @@ We will cover a variety of research topics which cannot be found in a single tex
 | Jan 17     | - Curse of dimensionality <br>  - Approximation theory | Sec. 1 to 3.1 of [Notes](../assets/iasd/approximation.pdf) <br> [Homework 2](../assets/iasd/mathsdl_hw2.pdf)|
 | Jan 24     | - Approximation theory (continued) | Sec. 3.2 to 4 of [Notes](../assets/iasd/approximation.pdf) <br> [Homework 3](../assets/iasd/mathsdl_hw3.pdf)|
 | Jan 31     | No class  |  |
-| Feb 07     |  |  |
+| Feb 07     | - NTK | [Notes](../assets/iasd/ntk.pdf) <br> [Homework 4](../assets/iasd/mathsdl_hw4.pdf) |
 | Feb 14     |  |  |
 | Feb 21     |  |  |
 | Feb 28     |  |  |
