--- a/_pages/iasd2025.md
+++ b/_pages/iasd2025.md
@@ -54,6 +54,6 @@ We will cover a variety of research topics which cannot be found in a single tex
 | Jan 24     | - Approximation theory (continued) | Sec. 3.2 to 4 of [Notes](../assets/iasd/approximation.pdf) <br> [Homework 3](../assets/iasd/mathsdl_hw3.pdf)|
 | Jan 31     | No class  |  |
 | Feb 07     | - NTK | [Notes](../assets/iasd/ntk.pdf) <br> [Homework 4](../assets/iasd/mathsdl_hw4.pdf) |
-| Feb 14     |  |  |
+| Feb 14     | - Intro to RMT | [Notes](../assets/iasd/rmt.pdf) <br> [Homework 4](../assets/iasd/mathsdl_hw5.pdf)  |
 | Feb 21     |  |  |
 | Feb 28     |  |  |
