--- a/_pages/iasd2025.md
+++ b/_pages/iasd2025.md
@@ -30,7 +30,6 @@ In the absence of a well-defined body of mathematics that could be called a bona
 - The lazy limit of large-width networks.
 - The double descent phenomena and benign overfitting.
 - Implicit bias of GD/SGD.
-- The speciation transition in diffusion models.
 
 ## Requirement
 
@@ -55,5 +54,5 @@ We will cover a variety of research topics which cannot be found in a single tex
 | Jan 31     | No class  |  |
 | Feb 07     | - NTK | [Notes](../assets/iasd/ntk.pdf) <br> [Homework 4](../assets/iasd/mathsdl_hw4.pdf) |
 | Feb 14     | - Intro to RMT | [Notes](../assets/iasd/rmt.pdf) <br> [Homework 5](../assets/iasd/mathsdl_hw5.pdf)  |
-| Feb 21     |  |  |
+| Feb 21     | - Analysis of ridge regression <br> - Double descent and benign overfitting | [Notes](../assets/iasd/ridge.pdf) <br> [Homework 6](../assets/iasd/mathsdl_hw6.pdf) |
 | Feb 28     |  |  |
