--- a/_pages/iasd2025.md
+++ b/_pages/iasd2025.md
@@ -56,3 +56,4 @@ We will cover a variety of research topics which cannot be found in a single tex
 | Feb 14     | - Intro to RMT | [Notes](../assets/iasd/rmt.pdf) <br> [Homework 5](../assets/iasd/mathsdl_hw5.pdf)  |
 | Feb 21     | - Analysis of ridge regression <br> - Double descent and benign overfitting | [Notes](../assets/iasd/ridge.pdf) <br> [Homework 6](../assets/iasd/mathsdl_hw6.pdf) |
 | Feb 28     |  |  |
+| Mar 14     | - Paper discussion |  |
