--- a/_pages/iasd2025.md
+++ b/_pages/iasd2025.md
@@ -37,12 +37,16 @@ Undergraduate level linear algebra, analysis and probability will be assumed. Pl
 
 ## Recommended literature
 
-We will cover a variety of research topics which cannot be found in a single textbook. Nevertheless, when preparing this course I took inspiration in some excellent ressources which are freely available, and which you might also find useful:
+The course is based on the following [lecture notes](../assets/iasd/lecture_notes.pdf).
+
+When preparing them, I took inspiration in some excellent ressources which are freely available, and which you might also find useful:
 
 - Francis Bach book [*Learning theory from first principles*](https://www.di.ens.fr/~fbach/ltfp_book.pdf).
 - Matus Telgarsky *Deep learning theory* [lecture notes](https://mjt.cs.illinois.edu/dlt/two.pdf).
 - Romain Couillet and Zhenyu Liao [book](https://polaris.imag.fr/romain.couillet/docs/RMT_ML_Book.pdf) on *Random Matrix Methods for Machine Learning*.
 - Theodor Misiakiewicz and Andrea Montanari [*Six Lectures on Linearized Neural Networks*](https://arxiv.org/abs/2308.13431).
+- Scott Pesme [PhD thesis](https://scottpesme.github.io/Articles/Scott_PhD_Manuscript.pdf) on linear diagonal neural networks.
+
 
 ## Course Schedule
 
@@ -55,5 +59,5 @@ We will cover a variety of research topics which cannot be found in a single tex
 | Feb 07     | - NTK | [Notes](../assets/iasd/ntk.pdf) <br> [Homework 4](../assets/iasd/mathsdl_hw4.pdf) |
 | Feb 14     | - Intro to RMT | [Notes](../assets/iasd/rmt.pdf) <br> [Homework 5](../assets/iasd/mathsdl_hw5.pdf)  |
 | Feb 21     | - Analysis of ridge regression <br> - Double descent and benign overfitting | [Notes](../assets/iasd/ridge.pdf) <br> [Homework 6](../assets/iasd/mathsdl_hw6.pdf) |
-| Feb 28     |  |  |
+| Feb 28     | - Implicit bias of algorithms   |  | [Notes](../assets/iasd/implicit_bias.pdf)
 | Mar 14     | - Paper discussion |  |
