--- a/_pages/iasd2025.md
+++ b/_pages/iasd2025.md
@@ -59,5 +59,5 @@ When preparing them, I took inspiration in some excellent ressources which are f
 | Feb 07     | - NTK | [Notes](../assets/iasd/ntk.pdf) <br> [Homework 4](../assets/iasd/mathsdl_hw4.pdf) |
 | Feb 14     | - Intro to RMT | [Notes](../assets/iasd/rmt.pdf) <br> [Homework 5](../assets/iasd/mathsdl_hw5.pdf)  |
 | Feb 21     | - Analysis of ridge regression <br> - Double descent and benign overfitting | [Notes](../assets/iasd/ridge.pdf) <br> [Homework 6](../assets/iasd/mathsdl_hw6.pdf) |
-| Feb 28     | - Implicit bias of algorithms   |  | [Notes](../assets/iasd/implicit_bias.pdf)
+| Feb 28     | - Implicit bias of algorithms   | [Notes](../assets/iasd/implicit_bias.pdf) | 
 | Mar 14     | - Paper discussion |  |
