--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,10 +1,21 @@
 ---
 ---
 
+@misc{vilucchio2025existenceconsistentadversarialattacks,
+      title={On the existence of consistent adversarial attacks in high-dimensional linear classification}, 
+      author={Matteo Vilucchio and Lenka Zdeborová and Bruno Loureiro},
+      year={2025},
+      eprint={2506.12454},
+      archivePrefix={arXiv},
+      primaryClass={stat.ML},
+      url={https://arxiv.org/abs/2506.12454}, 
+      bibtex_show={true},
+}      
+
 @misc{arnaboldi2025sequence,
       bibtex_show={true},
       title={Asymptotics of SGD in Sequence-Single Index Models and Single-Layer Attention Networks},
-      author={Luca Arnaboldi and Bruno Loureiro and Ludovic Stephan and Florent Krzakala and Lenka Zdeborova},
+      author={Luca Arnaboldi and Bruno Loureiro and Ludovic Stephan and Florent Krzakala and Lenka Zdeborová},
       year={2025},
       eprint={2506.02651},
       archivePrefix={arXiv},
