--- a/_pages/iaso2025.md
+++ b/_pages/iaso2025.md
@@ -15,7 +15,7 @@ Welcome to the course page for **Statistical Learning II**. Here you'll find all
   - Dr. Bruno Loureiro (main instructor)
   - Leonardo Defilippis (TA)
 - **Email**: [bruno.loureiro@di.ens.fr](mailto:bruno.loureiro@di.ens.fr)
-- **Semester**: Fall 2024
+- **Semester**: Fall 2025
 - **Class Times**: Wednesdays, 08:30 AM - 11:45 AM
 - **Location**: Check at the Dauphine ENT.
 
@@ -44,17 +44,17 @@ The material in this course takes inspiration from the following excellent resso
 
 | Date        | Lecture Topic                | Materials                            |
 |-------------|------------------------------|--------------------------------------|
-| Sept 11     | - Introduction <br> - Recap of Linear Algebra         |  [Slides](../assets/2024/lecture1_novids.pdf) |
-| Sept 18     | - Recap of Probability <br> - Supervised Learning     |  [Slides](../assets/iaso/2024/lecture2.pdf)|
-| Sept 25     | - Supervised Learning (continued)   | [Slides](../assets/iaso/2024/lecture3.pdf)      |
-| Oct 02     | - Least-squares regression   |  [Slides](../assets/iaso/2024/lecture4.pdf) |
-| Oct 09     | - Least-squares regression (continued)  |  [Slides](../assets/iaso/2024/lecture5.pdf)     |
-| Oct 16     | - Bias-variance decomposition  |  [Slides](../assets/iaso/2024/lecture6.pdf)     |
-| Oct 23     | Midterm exam  |    |
-| Oct 30     | Reading week (no class)  |    |
-| Nov 06     | - Ridge regression  |  [Slides](../assets/iaso/2024/lecture7.pdf)     |
-| Nov 13     | - Ridge regression (continued)  |  [Slides](../assets/iaso/2024/lecture8.pdf)     |
-| Nov 20     | - Best subset selection <br> - LASSO  |  [Slides](../assets/iaso/2024/lecture9.pdf)     |
-| Nov 27     | - LASSO (continued)  |  [Slides](../assets/iaso/2024/lecture10.pdf)     |
-| Dec 04     | - PCA <br> - Feature maps  |  [Slides](../assets/iaso/2024/lecture11.pdf)     |
-| Dec 11     | - Kernel ridge regression  |  [Slides](../assets/iaso/2024/lecture12.pdf)     |
+| Sept 10     | - Recap of maths        |  [Slides](../assets/iaso/2025/lecture1.pdf) |
+| Sept 18    | - Introduction <br> - Supervised Learning     | |
+| Sept 25    | | |
+| Oct 02     | | |
+| Oct 09     | | |
+| Oct 16     | | |
+| Oct 23     | | |
+| Oct 30     | | |
+| Nov 06     | | |
+| Nov 13     | | |
+| Nov 20     | | |
+| Nov 27     | | |
+| Dec 04     | | |
+| Dec 11     | | |
