--- a/_pages/iaso2025.md
+++ b/_pages/iaso2025.md
@@ -45,7 +45,7 @@ The material in this course takes inspiration from the following excellent resso
 | Date        | Lecture Topic                | Materials                            |
 |-------------|------------------------------|--------------------------------------|
 | Sept 10     | - Recap of maths        |  [Slides](../assets/iaso/2025/lecture1.pdf) |
-| Sept 17    | - Introduction <br> - Supervised Learning     | |
+| Sept 17    | - Introduction <br> - Supervised Learning     | [Slides](../assets/iaso/2025/lecture2.pdf) |
 | Sept 24    | | |
 | Oct 01     | | |
 | Oct 08     | | |
