--- a/_pages/iaso2025.md
+++ b/_pages/iaso2025.md
@@ -46,7 +46,7 @@ The material in this course takes inspiration from the following excellent resso
 |-------------|------------------------------|--------------------------------------|
 | Sept 10     | - Recap of maths        |  [Slides](../assets/iaso/2025/lecture1.pdf) |
 | Sept 17    | - Introduction <br> - Supervised Learning     | [Slides](../assets/iaso/2025/lecture2.pdf) |
-| Sept 24    | | |
+| Sept 24    | Supervised Learning (continued) | [Slides](../assets/iaso/2025/lecture3.pdf) |
 | Oct 01     | | |
 | Oct 08     | | |
 | Oct 15     | | |
