--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,6 +1,39 @@
 ---
 ---
 
+@misc{defilippis2025scalinglawsspectrashallow,
+      title={Scaling Laws and Spectra of Shallow Neural Networks in the Feature Learning Regime}, 
+      author={Leonardo Defilippis and Yizhou Xu and Julius Girardin and Emanuele Troiani and Vittorio Erba and Lenka Zdeborová and Bruno Loureiro and Florent Krzakala},
+      year={2025},
+      eprint={2509.24882},
+      archivePrefix={arXiv},
+      primaryClass={cs.LG},
+      url={https://arxiv.org/abs/2509.24882}, 
+      bibtex_show={true},
+}
+
+@misc{duranthon2025statisticaladvantagesoftmaxattention,
+      title={Statistical Advantage of Softmax Attention: Insights from Single-Location Regression}, 
+      author={O. Duranthon and P. Marion and C. Boyer and B. Loureiro and L. Zdeborová},
+      year={2025},
+      eprint={2509.21936},
+      archivePrefix={arXiv},
+      primaryClass={cs.LG},
+      url={https://arxiv.org/abs/2509.21936}, 
+      bibtex_show={true},
+}
+
+@misc{ayme2025breakingcursedimensionalitylinear,
+      title={Breaking the curse of dimensionality for linear rules: optimal predictors over the ellipsoid}, 
+      author={Alexis Ayme and Bruno Loureiro},
+      year={2025},
+      eprint={2509.21174},
+      archivePrefix={arXiv},
+      primaryClass={stat.ML},
+      url={https://arxiv.org/abs/2509.21174}, 
+      bibtex_show={true},
+}
+
 @misc{vilucchio2025existenceconsistentadversarialattacks,
       title={On the existence of consistent adversarial attacks in high-dimensional linear classification}, 
       author={Matteo Vilucchio and Lenka Zdeborová and Bruno Loureiro},
