--- a/_pages/iaso2025.md
+++ b/_pages/iaso2025.md
@@ -48,7 +48,7 @@ The material in this course takes inspiration from the following excellent resso
 | Sept 17    | - Introduction <br> - Supervised Learning     | [Slides](../assets/iaso/2025/lecture2.pdf) |
 | Sept 24    | Supervised Learning (continued) | [Slides](../assets/iaso/2025/lecture3.pdf) |
 | Oct 01     | Least squares | [Slides](../assets/iaso/2025/lecture4.pdf) |
-| Oct 08     | | |
+| Oct 08     | Least squares (continued) | [Slides](../assets/iaso/2025/lecture5.pdf) |
 | Oct 15     | | |
 | Oct 22     | | |
 | Oct 29     | | |
