--- a/_pages/iaso2025.md
+++ b/_pages/iaso2025.md
@@ -49,7 +49,7 @@ The material in this course takes inspiration from the following excellent resso
 | Sept 24    | Supervised Learning (continued) | [Slides](../assets/iaso/2025/lecture3.pdf) |
 | Oct 01     | Least squares | [Slides](../assets/iaso/2025/lecture4.pdf) |
 | Oct 08     | Least squares (continued) | [Slides](../assets/iaso/2025/lecture5.pdf) |
-| Oct 15     | | |
+| Oct 15     | Fixed design analysis of OLS | [Slides](../assets/iaso/2025/lecture6.pdf) |
 | Oct 22     | | |
 | Oct 29     | | |
 | Nov 05     | | |
