--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,6 +1,17 @@
 ---
 ---
 
+@misc{wortsman2025kernelridge,
+      title={Kernel ridge regression under power-law data: spectrum and generalization}, 
+      author={Arie Wortsman and Bruno Loureiro},
+      year={2025},
+      eprint={2510.04780},
+      archivePrefix={arXiv},
+      primaryClass={stat.ML},
+      url={https://arxiv.org/abs/2510.04780}, 
+      bibtex_show={true},
+}
+
 @misc{defilippis2025scalinglawsspectrashallow,
       title={Scaling Laws and Spectra of Shallow Neural Networks in the Feature Learning Regime}, 
       author={Leonardo Defilippis and Yizhou Xu and Julius Girardin and Emanuele Troiani and Vittorio Erba and Lenka Zdeborová and Bruno Loureiro and Florent Krzakala},
