--- a/_pages/iaso2025.md
+++ b/_pages/iaso2025.md
@@ -50,11 +50,11 @@ The material in this course takes inspiration from the following excellent resso
 | Oct 01     | Least squares | [Slides](../assets/iaso/2025/lecture4.pdf) |
 | Oct 08     | Least squares (continued) | [Slides](../assets/iaso/2025/lecture5.pdf) |
 | Oct 15     | Fixed design analysis of OLS | [Slides](../assets/iaso/2025/lecture6.pdf) |
-| Oct 22     | | |
-| Oct 29     | | |
-| Nov 05     | | |
-| Nov 12     | | |
+| Oct 22     | Reading week | |
+| Oct 29     | Mid-term exam | |
+| Nov 05     | Bias-variance decomposition | [Slides](../assets/iaso/2025/lecture7.pdf) |
+| Nov 12     | - Bias-variance decomposition (continued)  <br> - Ridge regression| [Slides lecture 8](../assets/iaso/2025/lecture8.pdf) <br> [Slides lecture 9](../assets/iaso/2025/lecture9.pdf) |
 | Nov 19     | | |
-| Nov 26     | | |
+| Nov 26     | No class (3h TD)| |
 | Dec 03     | | |
 | Dec 10     | | |
