--- a/_pages/iaso2025.md
+++ b/_pages/iaso2025.md
@@ -54,7 +54,7 @@ The material in this course takes inspiration from the following excellent resso
 | Oct 29     | Mid-term exam | |
 | Nov 05     | Bias-variance decomposition | [Slides](../assets/iaso/2025/lecture7.pdf) |
 | Nov 12     | - Bias-variance decomposition (continued)  <br> - Ridge regression| [Slides lecture 8](../assets/iaso/2025/lecture8.pdf) <br> [Slides lecture 9](../assets/iaso/2025/lecture9.pdf) |
-| Nov 19     | | |
+| Nov 19     | Best subset selection | [Slides](../assets/iaso/2025/lecture10.pdf) |
 | Nov 26     | No class (3h TD)| |
-| Dec 03     | | |
+| Dec 03     | LASSO | |
 | Dec 10     | | |
